--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 attrs==21.2.0
 black==21.12b0
+boto3==1.20.46
+botocore==1.23.46
+build==0.7.0
 click==8.0.3
 iniconfig==1.1.1
+jmespath==0.10.0
+marshmallow==3.14.1
 mypy-extensions==0.4.3
 packaging==21.2
 pathspec==0.9.0
+pep517==0.12.0
 platformdirs==2.4.0
 pluggy==1.0.0
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.5
+python-dateutil==2.8.2
+s3transfer==0.5.0
+six==1.16.0
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==4.0.1
+urllib3==1.26.8
